--- a/src/MyPage/MyPage.css
+++ b/src/MyPage/MyPage.css
@@ -81,3 +81,28 @@ body {
     margin-top: 10px;
   }
  
+ /* 하트버튼 이미지 바꾸기+ 숫자 높이  */
+  .dibs-container {
+    position: relative;
+    display: inline-block;
+    border-radius: 30px; /* 원하는 둥글기 정도로 조정 */
+    overflow: hidden; /* 이미지가 둥근 테두리 밖으로 넘치지 않도록 */
+    
+  }
+  
+  .dibs-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 30px; /* 원하는 둥글기 정도로 조정 */
+  }
+  
+  .dibs-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    font-size: 36px; 
+  }
+  
