--- a/src/MyPage/MyPage.css
+++ b/src/MyPage/MyPage.css
@@ -15,7 +15,6 @@ body {
     border-radius: 10px;
     
   }
-    
     /* 기본 텍스트 흰색 설정 */
     .container p, 
     .container h1 {
@@ -85,7 +84,7 @@ body {
   .dibs-container {
     position: relative;
     display: inline-block;
-    border-radius: 30px; /* 원하는 둥글기 정도로 조정 */
+    border-radius: 5px; /* 원하는 둥글기 정도로 조정 */
     overflow: hidden; /* 이미지가 둥근 테두리 밖으로 넘치지 않도록 */
     
   }
@@ -106,3 +105,13 @@ body {
     font-size: 36px; 
   }
   
+  .dids-1 {
+    color: white;
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+}
+.dids-1 button {
+  margin-right: 10px; /* 버튼과 오른쪽 사이 여백 추가 */
+}
+
