--- a/src/Store/DetailPage.css
+++ b/src/Store/DetailPage.css
@@ -1,15 +1,38 @@
-/* .navbar-brand {
-  height: 15px;
-  background-image: url(../img/logo.jpg);
-  background-size: cover;
-  background-position: center;
-} */
+.row {
+  padding: 20px 20px;
+}
+
+.box{
+  border: 1px solid gray;
+  border-Radius:10px;
+  height:100%
+}
+.logo {
+  display: flex;
+  /* width: 50px; */
+  height: 50px;
+  margin-top: 5px;
+}
+
+.btn-danger {
+  flex: 0.5;
+  background-Color:red;
+  height:40px;
+  /* width: 20vw; */
+  min-width: 100px;
+}
+
+.input {
+  display: flex;
+  /* align-items: center;  */
+  /* margin: 0 30vw; */
+}
 
 .image-section {
     width:auto;
     height:220px;
     overflow:hidden;
-    margin:0 0;
+    margin-top:10vw;
 }
 
 
@@ -27,10 +50,6 @@
 .detail-page {
     font-family: Arial, sans-serif;
     margin: 20px;
-}
-
-.header {
-    text-align: center;
 }
 
 .menu-section, .review-section, .footer {
