--- a/src/MyPage/MyPage.css
+++ b/src/MyPage/MyPage.css
@@ -79,14 +79,19 @@ body {
     font-size: 0.9rem;
     margin-top: 10px;
   }
- 
+  .dibs-container12 {
+    position: relative;
+    display: inline-block;
+    border-radius: 5px; /* 원하는 둥글기 정도로 조정 */
+    overflow: hidden; /* 이미지가 둥근 테두리 밖으로 넘치지 않도록 */ 
+    padding: 10px 10px 0px;
+  }
  /* 하트버튼 이미지 바꾸기+ 숫자 높이  */
   .dibs-container {
     position: relative;
     display: inline-block;
     border-radius: 5px; /* 원하는 둥글기 정도로 조정 */
-    overflow: hidden; /* 이미지가 둥근 테두리 밖으로 넘치지 않도록 */
-    
+    overflow: hidden; /* 이미지가 둥근 테두리 밖으로 넘치지 않도록 */ 
   }
   
   .dibs-image {
