--- a/src/MyPage/MyPage.css
+++ b/src/MyPage/MyPage.css
@@ -11,7 +11,7 @@ body {
 .container {
     position: relative;
     padding: 2rem;
-    color: #000000;
+    /* color: #000000; */
     border-radius: 10px;
     
   }
