--- a/src/Store/MainPage.css
+++ b/src/Store/MainPage.css
@@ -1,3 +1,15 @@
+.swiper-container {
+  margin-top: 10px;
+}
+
+.h6 {
+  text-align: center;
+}
+
+.p {
+  font-size: small;
+}
+
 /* Footer */
 .main-page {
   padding: 20px;
