--- a/src/Store/MainPage.css
+++ b/src/Store/MainPage.css
@@ -1,35 +1,48 @@
-.swiper-container {
-  margin-top: 10px;
+.footerfont {
+  font-family: "Yeon Sung", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 48px;
+}
+
+.headerfont {
+  font-family: "Yeon Sung", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 60px;
+}
+.font {
+  font-family: "Yeon Sung", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 35px;
+}
+
+.subfont {
+  font-family: "Yeon Sung", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 28px;
+}
+
+.main-list {
+  margin: 10px 10px;
 }
 
 .h6 {
   text-align: center;
-}
-
-.p {
-  font-size: small;
-}
-
-/* Footer */
-.main-page {
-  padding: 20px;
-  font-family: Arial, sans-serif;
+  margin-top: 5px;
 }
 
 .footer {
   background-color:none;
   padding: 50px;
-  text-align: center;
+  text-align: justify;
 }
 
 .footer-info {
   font-size: 14px;
   color: #ffffff;
-}
-
-.footer-info h2 {
-  margin: 0;
-  font-size: 24px;
 }
 
 .footer-info p {
@@ -52,8 +65,6 @@
   background-color: red;
 }
 
-
-
 /* 새롭게 단장할 메인 화면 */
 .swiper-container {
   width: 100%;
@@ -65,36 +76,14 @@
   border-radius: 8px;
   padding: 10px;
   text-align: center; /* 텍스트 중앙 정렬 */
+  height: 360px;
 }
 
 .restaurant-item img {
   width: 100%;
-  height: 200px; /* 정사각형 이미지 */
-  object-fit: cover; /* 이미지 비율 유지 */
+  height: 200px; 
+  object-fit: cover; 
 }
-
-.slider-container {
-  max-width: 100%;
-  margin: 0 auto; /* 중앙 정렬 */
-  padding: 20px 0; /* 상하 패딩 */
-  border-radius: 8px; /* 모서리 둥글게 */
-}
-
-.restaurant-item {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 10px;
-  text-align: center; /* 텍스트 중앙 정렬 */
-}
-
-.restaurant-item img {
-  width: 100%;
-  height: 200px; /* 정사각형 이미지 */
-  object-fit: cover; /* 이미지 비율 유지 */
-}
-
-/* 여기까쥐 */
-
 
 /*  상단 내비 */
 .nav-link {
@@ -136,12 +125,10 @@
   background-color: rgba(255, 255, 255, 0.2); /* 마우스 오버 시 배경색 */
   color: white; /* 마우스 오버 시 글자색 유지 */
 }
-
-
+s
 .dropdown-item {
   padding: 20px; /* 패딩을 늘려서 크기 확대 */
 }
-
 
 .secTitle {
   font-family: 'Gill Sans';
@@ -151,47 +138,7 @@
 .auth-links {
   font-size: 0.9rem; /* 글자 크기 줄이기 */
   text-align: right;
-  /* font-family:  */
 }
 
-.s9-4 {
-  padding: 20px;
-  font-size: 1.4rem;
-  font-weight: bold;
-}
-
-.gf {
-  font-family: "Nanum Brush Script", cursive;
-  font-size: 120px;
-}
-
-.gff {
-  font-family: 'Gill Sans', Calibri, sans-serif, cursive;
-  font-size: 50px;
-}
-
-.gfff {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, ;
-  font-size: 25px;
-  text-align: left;
-}
-
-.gffff {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, ;
-  font-size: 20px;
-  text-align: left;
-}
-
-/* 메뉴 호버 */
-.row img {
-  width: 100%;
-  max-height: 200px;
-  object-fit: cover;
-  transition: transform 0.2s; /* 호버 효과를 위한 트랜지션 */
-}
-
-.row img:hover {
-  transform: scale(1.05); /* 마우스 호버 시 이미지 확대 */
-}
 
 
