--- a/MyPage/MyPage.css
+++ b/MyPage/MyPage.css
@@ -1,84 +1,110 @@
 /* MyPage.css */ 
 body {
-    background-color: #212529; /* 이미지에서 추출한 배경색 */
-    color: #fff; /* 기본 텍스트 색상을 흰색으로 설정 */
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif; /* 기본 글꼴 */
-  }
-  
-/* 전체 배경 검정색 설정 */
+  background-color: #212529; /* 이미지에서 추출한 배경색 */
+  color: #fff; /* 기본 텍스트 색상을 흰색으로 설정 */
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif; /* 기본 글꼴 */
+} 
 .container {
-    position: relative;
-    padding: 2rem;
+  color:black;
+  position: relative;
+  padding: 1rem;
+  border-radius: 10px;
+  
+} 
+.container p, .container h1 {
     color: #fff;
-    border-radius: 10px;
-    background-color: #212529; /* 페이지 배경색 */
-  }
-    
-    /* 기본 텍스트 흰색 설정 */
-    .container p, 
-    .container h1 {
-      color: #fff;
-    }  
-  /* 오른쪽 상단에 배치되는 버튼 스타일 */
-  .back-to-home {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    background-color: #fff;
-    color: #212529;
-    font-weight: bold;
-    border: none;
-    border-radius: 30px;
-    padding: 0.5rem 1rem;
-  }
-  
-  .back-to-home:hover {
-    background-color: #f8f9fa; /* 살짝 회색으로 변경 */
-    color: #212529;
-    text-decoration: none;
-  }
-/* 모달 배경 */
+  }   
+.back-to-home {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: #fff;
+  color: #212529;
+  font-weight: bold;
+  border: none;
+  border-radius: 30px;
+  padding: 0.5rem 1rem;
+} 
+.back-to-home:hover {
+  background-color: #f8f9fa; /* 살짝 회색으로 변경 */
+  color: #212529;
+  text-decoration: none;
+} 
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  } 
-  
-  /* 모달 콘텐츠 */
-  .modal-content {
-    color: #000000;
-    border-radius: 20px; /* 원하는 정도로 조절 */
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    width: 700px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: relative;
-  }
-  
-  /* 닫기 버튼 */
-  .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-  }
-  
-  .error-message {
-    color: red;
-    font-size: 0.9rem;
-    margin-top: 10px;
-  }
- 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; 
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}   
+.modal-content {
+  color: #000000;
+  border-radius: 20px; /* 원하는 정도로 조절 */
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 700px; 
+  height: 500px;
+  position: relative;
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 500px;
+  max-height: 40vh; /* 화면 높이의 90%까지만 사용 */
+}  
+.modal-overflow{
+  overflow-y: scroll; /* 모달 내부에서만 스크롤 가능 */ 
+}
+.modal-overflow::-webkit-scrollbar {
+  background: white; 
+  width: 10px;
+}
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+} 
+.error-message {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 10px;
+} 
+.table1 {
+  width: 100%;    
+  margin-bottom: 10px; 
+} 
+th{
+  text-align: center;
+  vertical-align: middle; 
+}
+tr{
+  height: 50px;
+}
+td{  
+border-color: 1px black;
+  border-collapse: collapse;
+  text-align: center;
+  vertical-align: middle; 
+}
+.mb-3{
+  color: #b8b8b8;
+}
+.dibs-container{
+  display: 'flex';
+  align-items: 'center';
+  gap: '10px';
+  padding: '10px 10px'
+
+}
