--- a/src/Store/SearchStores.css
+++ b/src/Store/SearchStores.css
@@ -1,11 +1,40 @@
-.localFood_list {
-  width: calc(50%-50px);
-  list-style: none;
+.container {
+  margin-right: 0;
+  margin-left: auto;
+  max-width: 0;
 }
 
-.nav-pills > .tab > .active {
-  color: #ffffff !important;
-  background-color: rgb(253, 0, 0) !important;   
+
+.localFood_list {
+  display: grid;
+  display:flex;
+  flex-Wrap:wrap;
+  width: 70%;
+}
+
+
+.nav-link.active::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #ff0000;
+  z-index: 1;
+}
+
+.nav-link.active {
+  font-size: large;
+}
+
+.nav {
+ align-items: end;
+}
+
+.localFood_list {
+  /* width: calc(50%-50px); */
+  list-style: none;
 }
 
 .data {
