--- a/src/Store/DetailPage.css
+++ b/src/Store/DetailPage.css
@@ -21,19 +21,17 @@
   min-width: 100px;
 }
 
-.imgBox {
+/* .imgBox {}
 
-/* .input {
+.input {
   display: flex;
-  /* align-items: center;  */
-  /* margin: 0 30vw; */
-}
+  align-items: center; 
+} */
 
 
 .image-section {
     width:auto;
-    height:100px; */
-
+    height:100px;
     overflow:hidden;
     margin-top:10vw;
     border-color:1px solid white;
@@ -95,6 +93,7 @@
   z-index: 10000; /* 모달 오버레이보다 위에 위치하도록 설정 */
 }
 /* 닫기 버튼 */
+
 .close-button {
   position: absolute; 
   top: 8px;
@@ -105,4 +104,3 @@
   cursor: pointer;
   z-index: 10001; /* 닫기 버튼이 가장 위에 오도록 설정 */
 }
-
