--- a/src/Store/DetailPage.css
+++ b/src/Store/DetailPage.css
@@ -1,4 +1,3 @@
-
 .row {
   padding: 20px 20px;
 }
@@ -11,9 +10,7 @@
 
 .logo {
   display: flex;
-  /* width: 50px; */
   height: 50px;
-  margin-top: 5px;
 }
 
 .btn-danger {
@@ -24,18 +21,20 @@
   min-width: 100px;
 }
 
-.input {
+.imgBox {
+
+/* .input {
   display: flex;
   /* align-items: center;  */
   /* margin: 0 30vw; */
-}
-
-
+} 
 .image-section {
     width:auto;
-    height:100px;
+    height:100px;  
     overflow:hidden;
     margin-top:10vw;
+    border-color:1px solid white;
+    display:flex;
 } 
 
 .btn-primary {
@@ -50,7 +49,6 @@
   }
 
 .detail-page {
-    font-family: Arial, sans-serif;
     margin: 20px;
 }
 
@@ -104,4 +102,3 @@
   cursor: pointer;
   z-index: 10001; /* 닫기 버튼이 가장 위에 오도록 설정 */
 }
-
