--- a/src/Store/SearchStores.css
+++ b/src/Store/SearchStores.css
@@ -1,21 +1,41 @@
+
+.address {
+  font-size: small;
+}
+
+.link {
+  text-decoration-line: none;
+  color: #fff;
+  text-align: center;
+}
+
+.img {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.data {
+  width: 50%;
+ 
+  padding: 10px;
+  /* display: flex; */
+  list-style-type: none;
+}
+
 .container {
-  /* margin-right: 0; /
-  / margin-left: auto;
-  max-width: auto; */
   display: flex;
   justify-content: center;
+  padding-left: 0;
 }
 
-
-.localFood_list {
-  display: grid;
+.ulul {
   display:flex;
   flex-Wrap:wrap;
-  width: 70%;
-  padding-left: 0rem;
-  list-style: none;
+  width: 50%;
+  margin: 0;
+  padding: 0;
 }
-
 
 .nav-link.active::before{
   content: "";
@@ -34,20 +54,4 @@
 
 .nav {
  align-items: end;
-}
-
-.data {
-  width: 50%;
-  box-Sizing: border-box; 
-  padding: 10px;
-}
-
-.img {
-  width: 100%;
-  height: 200px;
-}
-
-.textBox {
-  color: #ffffff;
-  text-decoration:none;
 }
