--- a/src/Store/DetailPage.css
+++ b/src/Store/DetailPage.css
@@ -1,6 +1,36 @@
-.row {
-  padding: 20px 20px;
+#dtail-sc {
+  position: relative;
 }
+
+#detail-right-btn,
+#detail-left-btn{
+  width: 40px; /* 화살표 크기 조절 */
+  height: 40px;
+  color: red; /* 화살표 색상 변경 */
+}
+
+#detail-right-btn{
+  position: absolute;
+  right: 22%; /* 컨테이너의 오른쪽 1/3 지점에 배치 */
+  transform: translateX(50%); /* 중앙으로 화살표 정렬 */
+}
+
+#detail-left-btn{
+  position: absolute;
+  left: 22%; /* 컨테이너의 왼쪽 1/3 지점에 배치 */
+  transform: translateX(-50%); /* 중앙으로 화살표 정렬 */
+}
+
+.swiper-slide{
+  opacity: 0.3;
+}
+
+#detail-left-btn, .swiper-slide-active, #detail-right-btn {
+  opacity: 1;
+}
+.kingdiv {
+  position: relative;
+} 
 
 .box{
   border: 1px solid gray;
@@ -28,7 +58,7 @@
     color: white; /* 글자색을 흰색으로 */
   }
   
-  .btn-primary:hover {
+.btn-primary:hover {
     background-color: rgba(255, 255, 255, 0.2); /* 마우스 오버 시 배경색 추가 */
   }
 
