--- a/src/Store/MainPage.css
+++ b/src/Store/MainPage.css
@@ -17,10 +17,10 @@
 }
 
 .subfont {
-  font-family: "Yeon Sung", system-ui;
-  font-weight: 400;
+  font-family: sans-serif;
+  font-weight: 500;
   font-style: normal;
-  font-size: 28px;
+  font-size: 32px;
 }
 
 .nemoBox select, 
@@ -53,7 +53,9 @@
 }
 
 .main-list {
-  margin: 10px 10px;
+  margin: 20px 20px;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 
 .h6 {
